test/parser/if.dmz
// RUN: (dmz %s -ast-dump 2>&1 || true) | filecheck %s
fn main() -> void {
    // CHECK: [[# @LINE + 1 ]]:8: error: expected '('
    if {}
    // CHECK: [[# @LINE + 1 ]]:9: error: expected expression
    if () {}
    // CHECK: [[# @LINE + 1 ]]:11: error: expected ')'
    if (0 {}

    // CHECK: [[# @LINE + 1 ]]:12: error: expected expression
    if (0) #{}

    // CHECK: [[# @LINE + 3 ]]:1: error: expected ')'
    if (0) {}
    else ({}

    // CHECK: [[# @LINE + 2 ]]:14: error: expected expression
    if (0) {}
    else if () {}
    else {}
    // CHECK: [[# @LINE - 1 ]]:5: error: expected expression

    if (0) {}
    // CHECK: IfStmt
    // CHECK-NEXT:   IntLiteral '0'
    // CHECK-NEXT:   Block

    if (0) {}
    else {}
    // CHECK: IfStmt
    // CHECK-NEXT:   IntLiteral '0'
    // CHECK-NEXT:   Block
    // CHECK-NEXT:   Block

    const zero = 0;
    if (zero) {}
    else if (1) {}
    else if (2) {}
    else {}
    // CHECK:   DeclRefExpr zero
    // CHECK-NEXT:   Block
    // CHECK-NEXT:   Block
    // CHECK-NEXT:     IfStmt
    // CHECK-NEXT:       IntLiteral '1'
    // CHECK-NEXT:       Block
    // CHECK-NEXT:       Block
    // CHECK-NEXT:         IfStmt
    // CHECK-NEXT:           IntLiteral '2'
    // CHECK-NEXT:           Block
    // CHECK-NEXT:           Block
}
